# PracticaEmbedded

./: Cargo.toml  linker_wrapper.sh
src/: events.rs  input_audio_task.rs  main.rs  network_thread.rs  output_audio_task.rs  terminal_task.rs  utils.rs
