[package]
name = "phone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.8.1"
anyhow = "1.0.75"
crossbeam = "0.8.2"
crossterm = "0.27.0"
input-linux = "0.6.0"
minimp3 = "0.5.1"
ratatui = "0.23.0"
